--- a/tes.html
+++ b/tes.html
@@ -30,6 +30,29 @@
     font-size: 22px;
   }
 
+  .shift-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 3% 5px 3%;
+  }
+
+  .shift-header h2 {
+    margin: 0;
+    font-size: 22px;
+  }
+
+  .shift-selector {
+    font-size: 22px;
+    font-weight: bold;
+    padding: 4px 10px;
+    border-radius: 6px;
+    border: 2px solid #083D36;
+    color: #083D36;
+    background: white;
+    cursor: pointer;
+  }
+
   .container {
     width: 95%;
     margin: 15px auto;
@@ -71,7 +94,6 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === BAGIAN TOTAL + JAM === */
   .top-bar {
     display: flex;
     justify-content: space-between;
@@ -115,7 +137,6 @@
     color: #333;
   }
 
-  /* === JAM DAN LOGO === */
   .total-wrapper1 {
     display: flex;
     flex-direction: column;
@@ -177,7 +198,6 @@
     100% { transform: scale(1); }
   }
 
-  /* === FOOTER ZINUS === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -195,68 +215,27 @@
     font-size: 16px;
     letter-spacing: 0.5px;
   }
-
-  /* === RESPONSIVE === */
-  @media (max-width: 768px) {
-    .container {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 0;
-      box-shadow: none;
-    }
-
-    th, td {
-      font-size: 14px;
-      padding: 6px 4px;
-    }
-
-    .marquee { font-size: 16px; padding: 8px 0; }
-    h2 { font-size: 18px; }
-    #jam { font-size: 24px; }
-    #tanggal { font-size: 14px; }
-
-    .zinus-logo, .zinus-logo1 {
-      width: 45px;
-      height: 45px;
-    }
-
-    .logo-row {
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .footer-zinus p { font-size: 14px; }
-  }
 </style>
 </head>
 <body>
 
-<!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
-<div class="total-wrapper">
-    <div class="total-box">
-      <table>
-        <thead><tr><th>SHIFT</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>
-              <select id="shiftSelector" 
-                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-              </select>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+
+<!-- === HEADER SHIFT + JUDUL === -->
+<div class="shift-header">
+  <select id="shiftSelector" class="shift-selector">
+    <option value="1" selected>Shift 1</option>
+    <option value="2">Shift 2</option>
+  </select>
+  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+</div>
+
 <!-- === TABEL TOPPER === -->
 <div class="container">
-  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
@@ -288,27 +267,9 @@
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === BAGIAN TOTAL DAN JAM === -->
+<!-- === TOTAL, JAM, LOGO === -->
 <div class="top-bar">
-
   <div class="total-wrapper">
-    <div class="total-box">
-      <table>
-        <thead><tr><th>SHIFT</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>
-              <select id="shiftSelector" 
-                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-              </select>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
     <div class="total-box">
       <table id="tableTotalTopper">
         <thead><tr><th>TOTAL TOPPER</th></tr></thead>
@@ -330,13 +291,12 @@
       <div id="jam"></div>
     </div>
     <div class="logo-row">
-      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
-      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+      <img src="logo-zinus1.gif" class="zinus-logo1">
+      <img src="Hyundai_Logo.png" class="zinus-logo">
     </div>
   </div>
 </div>
 
-<!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
 </footer>
@@ -372,7 +332,6 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-
         const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 90 && cleanValue > 0) {
@@ -391,7 +350,6 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-
         const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
         if (index > 0 && !isNaN(cleanValue)) {
           if (cleanValue < 75 && cleanValue > 0) {
@@ -406,17 +364,14 @@ async function loadSheetData() {
 
     const totalRow = rows[18];
     if (totalRow) {
-      const topperValue = totalRow[0] || "0";
-      const foamValue = totalRow[1] || "0";
-      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
+      totalTopperBody.innerHTML = `<tr><td>${totalRow[0] || "0"}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${totalRow[1] || "0"}</td></tr>`;
     }
 
     const now = new Date();
     status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-
   } catch (err) {
-    console.error("Fetch error:", err);
+    console.error(err);
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
@@ -433,18 +388,8 @@ loadSheetData();
 setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
-  const value = this.value;
-  if (value === "2") {
-    window.location.href = "shift2.html";
-  } else {
-    window.location.href = "index.html";
-  }
+  if (this.value === "2") window.location.href = "shift2.html";
 });
 </script>
 </body>
 </html>
-
-
-
-
-
