--- a/tes.html
+++ b/tes.html
@@ -24,33 +24,26 @@
   }
 
   h2 {
-    text-align: center;
     color: #333;
-    margin: 10px 0 10px;
+    margin: 10px 0;
     font-size: 22px;
   }
 
-  .shift-header {
+  .h2-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 3% 5px 3%;
+    margin: 10px 3%;
   }
 
-  .shift-header h2 {
-    margin: 0;
-    font-size: 22px;
-  }
-
-  .shift-selector {
+  .h2-header select {
     font-size: 22px;
     font-weight: bold;
-    padding: 4px 10px;
-    border-radius: 6px;
-    border: 2px solid #083D36;
+    border: none;
+    background: none;
     color: #083D36;
-    background: white;
     cursor: pointer;
+    outline: none;
   }
 
   .container {
@@ -94,6 +87,7 @@
     border-bottom-right-radius: 10px;
   }
 
+  /* === TOTAL + JAM === */
   .top-bar {
     display: flex;
     justify-content: space-between;
@@ -117,11 +111,6 @@
     width: 180px;
   }
 
-  .total-box table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
   .total-box th {
     background: #083D36;
     color: white;
@@ -137,6 +126,7 @@
     color: #333;
   }
 
+  /* === JAM & LOGO === */
   .total-wrapper1 {
     display: flex;
     flex-direction: column;
@@ -144,10 +134,6 @@
     justify-content: center;
     margin-right: 3%;
     text-align: center;
-  }
-
-  .datetime {
-    margin-bottom: 10px;
   }
 
   #tanggal {
@@ -161,7 +147,6 @@
     font-weight: bold;
     color: #006400;
     margin-top: 5px;
-    text-align: center;
   }
 
   .logo-row {
@@ -182,14 +167,8 @@
   }
 
   @keyframes fadeZoomIn {
-    0% {
-      opacity: 0;
-      transform: scale(0.8) rotate(-5deg);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1) rotate(0deg);
-    }
+    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+    100% { opacity: 1; transform: scale(1) rotate(0deg); }
   }
 
   @keyframes pulse {
@@ -198,6 +177,7 @@
     100% { transform: scale(1); }
   }
 
+  /* === FOOTER === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -213,72 +193,82 @@
   .footer-zinus p {
     margin: 5px 0 15px;
     font-size: 16px;
-    letter-spacing: 0.5px;
+  }
+
+  @media (max-width: 768px) {
+    th, td { font-size: 14px; padding: 6px 4px; }
+    .marquee { font-size: 16px; }
+    h2 { font-size: 16px; }
+    #jam { font-size: 24px; }
+    #tanggal { font-size: 14px; }
   }
 </style>
 </head>
 <body>
 
+<!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-<!-- === HEADER SHIFT + JUDUL === -->
-<div class="shift-header">
-  <select id="shiftSelector" class="shift-selector">
-    <option value="1" selected>Shift 1</option>
-    <option value="2">Shift 2</option>
-  </select>
-  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
-</div>
-
 <!-- === TABEL TOPPER === -->
 <div class="container">
+  <div class="h2-header">
+    <select id="shiftSelector">
+      <option value="1" selected>SHIFT 1</option>
+      <option value="2">SHIFT 2</option>
+    </select>
+    <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+    <div style="width:80px;"></div>
+  </div>
+
   <table id="tableTopper">
     <thead>
       <tr>
         <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th>
+        <th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyTopper">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+      <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TABEL FOAM === -->
+<!-- === FOAM PACKING === -->
 <div class="container">
-  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
+  <h2 style="text-align:center;">FOAM PACKING TARGET : 75 Pcs/Jam</h2>
   <table id="tableFoam">
     <thead>
       <tr>
         <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th>
+        <th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyFoam">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+      <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TOTAL, JAM, LOGO === -->
+<!-- === TOTAL & JAM === -->
 <div class="top-bar">
   <div class="total-wrapper">
     <div class="total-box">
-      <table id="tableTotalTopper">
+      <table>
         <thead><tr><th>TOTAL TOPPER</th></tr></thead>
         <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
       </table>
     </div>
 
     <div class="total-box">
-      <table id="tableTotalFoam">
+      <table>
         <thead><tr><th>TOTAL FOAM</th></tr></thead>
         <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
       </table>
@@ -286,19 +276,17 @@
   </div>
 
   <div class="total-wrapper1">
-    <div class="datetime">
-      <div id="tanggal"></div>
-      <div id="jam"></div>
-    </div>
+    <div id="tanggal"></div>
+    <div id="jam"></div>
     <div class="logo-row">
-      <img src="logo-zinus1.gif" class="zinus-logo1">
-      <img src="Hyundai_Logo.png" class="zinus-logo">
+      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
     </div>
   </div>
 </div>
 
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
+  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
 <script>
@@ -309,19 +297,14 @@ async function loadSheetData() {
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
-
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
     const totalTopperBody = document.getElementById("bodyTotalTopper");
     const totalFoamBody = document.getElementById("bodyTotalFoam");
-
     topperBody.innerHTML = "";
     foamBody.innerHTML = "";
-    totalTopperBody.innerHTML = "";
-    totalFoamBody.innerHTML = "";
 
     const topperRows = rows.slice(5, 8);
     const foamRows = rows.slice(11, 16);
@@ -332,12 +315,10 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 90 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
+        const v = parseFloat(cell.replace(/[^0-9.]/g, ""));
+        if (index > 0 && !isNaN(v) && v < 90 && v > 0) {
+          td.style.backgroundColor = "#ffcccc";
+          td.style.color = "#a80000";
         }
         tr.appendChild(td);
       });
@@ -350,12 +331,10 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 75 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
+        const v = parseFloat(cell.replace(/[^0-9.]/g, ""));
+        if (index > 0 && !isNaN(v) && v < 75 && v > 0) {
+          td.style.backgroundColor = "#ffcccc";
+          td.style.color = "#a80000";
         }
         tr.appendChild(td);
       });
@@ -364,14 +343,12 @@ async function loadSheetData() {
 
     const totalRow = rows[18];
     if (totalRow) {
-      totalTopperBody.innerHTML = `<tr><td>${totalRow[0] || "0"}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td>${totalRow[1] || "0"}</td></tr>`;
+      totalTopperBody.innerHTML = `<tr><td>${totalRow[0]}</td></tr>`;
+      totalFoamBody.innerHTML = `<tr><td>${totalRow[1]}</td></tr>`;
     }
 
-    const now = new Date();
-    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-  } catch (err) {
-    console.error(err);
+    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+  } catch {
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
@@ -388,7 +365,8 @@ loadSheetData();
 setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
-  if (this.value === "2") window.location.href = "shift2.html";
+  const v = this.value;
+  window.location.href = v === "2" ? "shift2.html" : "index.html";
 });
 </script>
 </body>
