--- a/tes.html
+++ b/tes.html
@@ -6,206 +6,226 @@
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
   body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background-color: #f4f6f8;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* hindari scroll horizontal */
+}
 
-  .marquee {
-    background: #083D36;
-    color: white;
-    padding: 15px 0;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-  }
+.marquee {
+  background: #083D36;
+  color: white;
+  padding: 12px 0;
+  font-size: clamp(16px, 4vw, 50px); /* responsive font */
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
-  h2 {
-    color: #333;
-    margin: 10px 0;
-    font-size: 28px;
-  }
+h2 {
+  color: #333;
+  margin: 10px 0;
+  font-size: clamp(18px, 3vw, 28px);
+}
 
+.h2-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 3%;
+  flex-wrap: wrap;
+}
+
+.h2-header select {
+  font-size: clamp(16px, 2.5vw, 26px);
+  font-weight: bold;
+  border: none;
+  background: none;
+  color: #083D36;
+  cursor: pointer;
+  outline: none;
+  min-width: 100px;
+}
+
+.container {
+  width: 95vw;
+  max-width: 100%;
+  margin: 15px auto;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  overflow-x: auto; /* hanya jika perlu */
+  padding: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  word-wrap: break-word; /* pecah kata agar tidak overflow */
+  table-layout: fixed; /* penting untuk wrapping kolom */
+}
+
+th, td {
+  padding: 10px 6px;
+  text-align: center;
+  font-size: clamp(14px, 2vw, 32px);
+  overflow-wrap: break-word;
+}
+
+th {
+  background: #083D36;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #e3f2fd;
+}
+
+.footer {
+  text-align: right;
+  font-size: clamp(12px, 1.5vw, 18px);
+  padding: 8px;
+  background: #f1f1f1;
+  color: #666;
+  border-top: 1px solid #ddd;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+/* === TOTAL + JAM === */
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 20px 3%;
+  flex-wrap: wrap;
+}
+
+.total-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.total-table {
+  width: 100%;
+  max-width: 650px;
+  border-collapse: collapse;
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.total-table th {
+  background: #083D36;
+  color: white;
+  font-size: clamp(18px, 3vw, 26px);
+  padding: 10px;
+}
+
+.total-table td {
+  font-size: clamp(24px, 4vw, 36px);
+  font-weight: bold;
+  padding: 12px;
+  color: #333;
+  border-top: 1px solid #ddd;
+  word-wrap: break-word;
+}
+
+/* === JAM & LOGO === */
+.total-wrapper1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 3%;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+#tanggal {
+  font-size: clamp(18px, 3vw, 26px);
+  font-weight: 600;
+  color: #333;
+}
+
+#jam {
+  font-size: clamp(30px, 6vw, 55px);
+  font-weight: bold;
+  color: #006400;
+  margin-top: 8px;
+}
+
+.logo-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.zinus-logo, .zinus-logo1 {
+  width: clamp(40px, 5vw, 70px);
+  height: clamp(40px, 5vw, 70px);
+  border-radius: 10px;
+  background: white;
+  object-fit: contain;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
+}
+
+/* === FOOTER === */
+.footer-zinus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #083D36;
+  color: white;
+  padding: 25px 10px;
+  border-top: 4px solid #004d00;
+  margin-top: 10px;
+}
+
+.footer-zinus p {
+  margin: 5px 0 15px;
+  font-size: clamp(14px, 2vw, 20px);
+}
+
+@keyframes fadeZoomIn {
+  0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+  100% { opacity: 1; transform: scale(1) rotate(0deg); }
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+/* Responsive tweaks */
+@media (max-width: 768px) {
   .h2-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px 3%;
-  }
-
-  .h2-header select {
-    font-size: 26px;
-    font-weight: bold;
-    border: none;
-    background: none;
-    color: #083D36;
-    cursor: pointer;
-    outline: none;
-  }
-
-  .container {
-    width: 95%;
-    margin: 15px auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    overflow-x: auto;
-    padding: 0;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-  }
-
-  th, td {
-    padding: 14px 8px;
-    text-align: center;
-    font-size: 32px;
-  }
-
-  th {
-    background: #083D36;
-    color: white;
-  }
-
-  tr:nth-child(even) { background-color: #f9f9f9; }
-  tr:hover { background-color: #e3f2fd; }
-
-  .footer {
-    text-align: right;
-    font-size: 18px;
-    padding: 10px;
-    background: #f1f1f1;
-    color: #666;
-    border-top: 1px solid #ddd;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
-  /* === TOTAL + JAM === */
-  .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px 3%;
-    flex-wrap: wrap;
-  }
-
-  .total-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    align-items: center;
-  }
-
-  /* === TOTAL TABEL BARU === */
-  .total-table {
-    width: 100%;
-    max-width: 650px;
-    border-collapse: collapse;
-    text-align: center;
-    background: white;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  }
-
-  .total-table th {
-    background: #083D36;
-    color: white;
-    font-size: 26px;
-    padding: 10px;
-  }
-
-  .total-table td {
-    font-size: 36px;
-    font-weight: bold;
-    padding: 12px;
-    color: #333;
-    border-top: 1px solid #ddd;
-  }
-
-  /* === JAM & LOGO === */
-  .total-wrapper1 {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 3%;
-    text-align: center;
+    gap: 10px;
   }
-
-  #tanggal {
-    font-size: 26px;
-    font-weight: 600;
-    color: #333;
-  }
-
-  #jam {
-    font-size: 55px;
-    font-weight: bold;
-    color: #006400;
-    margin-top: 8px;
-  }
-
-  .logo-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .total-wrapper {
+    flex-direction: column;
     gap: 15px;
   }
+}
 
-  .zinus-logo, .zinus-logo1 {
-    width: 70px;
-    height: 70px;
-    border-radius: 10px;
-    background: white;
-    object-fit: contain;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
-  }
-
-  @keyframes fadeZoomIn {
-    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
-    100% { opacity: 1; transform: scale(1) rotate(0deg); }
-  }
-
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-    100% { transform: scale(1); }
-  }
-
-  /* === FOOTER === */
-  .footer-zinus {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #083D36;
-    color: white;
-    padding: 25px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 10px;
-  }
-
-  .footer-zinus p {
-    margin: 5px 0 15px;
-    font-size: 20px;
-  }
-
-  @media (max-width: 768px) {
-    th, td { font-size: 16px; padding: 6px 4px; }
-    .marquee { font-size: 20px; }
-    h2 { font-size: 18px; }
-    #jam { font-size: 28px; }
-    #tanggal { font-size: 16px; }
-  }
 </style>
 
 </head>
